test/bad/coord0.pacc
/*
nocc foo
*/

/* test that C errors are reported at the right place in the pacc file */

S <- "foo" { ++ }
